tests/baselines/reference/topLevelFileModuleMissing.errors.txt
tests/cases/conformance/externalModules/foo_1.ts(1,22): error TS2307: Cannot find module 'vs/foo' or its corresponding type declarations.


==== tests/cases/conformance/externalModules/foo_1.ts (1 errors) ====
    import foo = require("vs/foo");
                         ~~~~~~~~
!!! error TS2307: Cannot find module 'vs/foo' or its corresponding type declarations.
    var z = foo.x + 10;
    
==== tests/cases/conformance/externalModules/vs/foo_0.ts (0 errors) ====
    export var x: number;
    